--- a/AspMVCECommerce/Content/Site.css
+++ b/AspMVCECommerce/Content/Site.css
@@ -719,3 +719,14 @@ input:focus-visible {
 .modal-product-add-btn:hover {
     opacity: 1 !important;
 }
+
+
+/* limit product name length */
+.product-namex {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
