--- a/AspMVCECommerce/Views/Home/Index.cshtml
+++ b/AspMVCECommerce/Views/Home/Index.cshtml
@@ -134,7 +134,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -191,7 +191,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <button class="add-to-cart-btn"  onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
                                                 }
                                             }
                                             else
@@ -265,7 +265,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -404,7 +404,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
                                             @if (item.PromoSaleOFF > 0)
@@ -544,7 +544,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -685,7 +685,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -816,7 +816,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -1036,7 +1036,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -1174,7 +1174,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -1307,7 +1307,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -1440,7 +1440,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -1573,7 +1573,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -1706,7 +1706,7 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.Category.Name</p>
-                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory">@item.Name</a></h3>
+                                            <h3 class="product-name"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex" title="@item.Name">@item.Name</a></h3>
 
 
 
@@ -2079,6 +2079,4 @@
     <!-- /container -->
 </div>
 <!-- /SECTION -->
-
-
 
