update send email code

--- a/AspMVCECommerce/Views/Home/SendEmail.cshtml
+++ b/AspMVCECommerce/Views/Home/SendEmail.cshtml
@@ -7,14 +7,9 @@
 
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
-
+    <title>Zaldy's Ecommerce</title>
 </head>
 <body>
-
-
-
-
 
     <table cellspacing="0" cellpadding="0" border="0" width="600" class="m_-4140746664795773952container" align="center">
         <tbody>
@@ -589,9 +584,6 @@
             </tr>
         </tbody>
     </table>
-
-
-
 
 </body>
 </html>
